--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=3
 compile.on.save=true
-user.properties.file=/Users/MrYankson/Library/Application Support/NetBeans/8.2/build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Ibrahim-Abdullah\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
